--- a/rootfs/etc/mdev.conf
+++ b/rootfs/etc/mdev.conf
@@ -41,6 +41,6 @@ $MODALIAS=.*	root:root 660 @modprobe "$MODALIAS"
 
 # sd card
 sd[a-z]          0:6     660
-mmcblk[0-9]     0:6     660
+#mmcblk[0-9]     0:6     660
 sd[a-z][0-9]      0:6     660 */lib/mdev/automounter.sh
-mmcblk[0-9]p[0-9] 0:6     660 */lib/mdev/automounter.sh
+#mmcblk[0-9]p[0-9] 0:6     660 */lib/mdev/automounter.sh
