--- a/rootfs/etc/umtprd/umtprd.conf
+++ b/rootfs/etc/umtprd/umtprd.conf
@@ -4,7 +4,7 @@ storage "/mnt/mmcblk0p1/logs"      "log folder" "rw"
 storage "/mnt/mmcblk0p1/conf"	   "conf folder" "rw"
 
 manufacturer "Volantis System"
-product "Volantis"
+product "The Volantis Product"
 serial "01234567"
 firmware_version "Rev A"
 interface "MTP"
@@ -16,11 +16,11 @@ usb_subclass 0x1      # Still Imaging device
 usb_protocol 0x1      #
 usb_dev_version 0x3008
 
-usb_functionfs_mode 0x0
+usb_functionfs_mode 0x1
 
-usb_dev_path   "/dev/gadget/nuc980-usbdev"
-usb_epin_path  "/dev/gadget/ep1"
-usb_epout_path "/dev/gadget/ep2"
-usb_epint_path "/dev/gadget/ep3"
+usb_dev_path   "/dev/ffs-mtp/ep0"
+usb_epin_path  "/dev/ffs-mtp/ep1"
+usb_epout_path "/dev/ffs-mtp/ep2"
+usb_epint_path "/dev/ffs-mtp/ep3"
 
 usb_max_packet_size 0x200
